--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   niku: ^2.3.3
-  timelines: ^0.1.0
   flutter_hooks: ^0.18.5+1
+  go_router: ^6.0.7
+  intl: ^0.18.0
+  recase: ^4.1.0
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
